Make sure the title box doesn't overlap the zoom control on smaller screens.

--- a/site/css/main.css
+++ b/site/css/main.css
@@ -25,13 +25,18 @@ body {
 }
 
 #title {
-  position: absolute;
-  z-index: 1000;
-  top: 0;
-  right: 0;
   background-color: rgba(255, 255, 255, 0.9);
   border-bottom: thin solid gray;
-  border-left: thin solid gray;
   font: 24px "Helvetica Neue", Arial, Helvetica, sans-serif;
   padding: 10px;
+}
+
+@media (min-width: 640px) {
+  #title {
+    position: absolute;
+    z-index: 1000;
+    top: 0;
+    right: 0;
+    border-left: thin solid gray;
+  }
 }
